# lightspeed-dhl-adapter

./: .envrc  .gitignore  Cargo.toml  Makefile  config.example.toml  flake.nix  go.mod  go.sum  handlers.go  integration_test.go  lightspeed.sh  logger.go  main.go  package.nix  readme.md  steiger.yml  tmp.db
config/: config.go
crates/adapter/: Cargo.toml
crates/adapter/src/: config.rs  main.rs  metrics.rs  poll.rs  routes.rs  schema.rs  transform.rs
crates/adapter/src/database/: mod.rs  models.rs
crates/dhl/: Cargo.toml  cli.rs  client.rs  models.rs
crates/lightspeed/: Cargo.toml  cli.rs  client.rs  models.rs
database/: database_test.go  init.go  operations.go  operations_test.go
dhl/: auth.go  client.go  client_test.go  dhl_test.go  operations.go  poll.go  transform.go  transform_test.go  types.go  utils.go
helm/: Chart.yaml  values-local.yaml  values-prod.yaml
helm/manifests/: restore-database.yaml
helm/templates/: database.yaml  mark-stale.yaml  metrics.yaml  poll-status.yaml  webhook.yaml
lightspeed/: operations.go  transform.go  types.go  utils.go
logger/: logger.go
migrations/2025-05-04-225509_create_orders/: down.sql  up.sql
migrations/2025-09-28-114452_draft_id_drop_not_null_constraint/: down.sql  up.sql
migrations/2025-11-28-105120_order_stale/: down.sql  up.sql
nix/: flake.nix
scripts/: dhl.sh
secrets/: secrets.go
server/: handlers.go
src/: config.rs  go.mod  go.sum  logging.go  main.go  main.rs  metrics.rs  poll.rs  routes.go  routes.rs  transform.rs  utils.rs
src/config/: config.go
src/database/: init.go  mod.rs  operations.go
src/dhl/: client.rs  mod.rs  models.rs  operations.go  poll.go  utils.go
src/lightspeed/: client.rs  models.rs  operations.go
utils/: assert.go  utils.go
