[package]
name = "adapter"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lightspeed-dhl-adapter"
path = "src/main.rs"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = "line-tables-only"
split-debuginfo = "unpacked"
incremental = true
overflow-checks = false

[profile.dev.package."*"]
opt-level = 3
debug = false

[dependencies]
dhl = { path = "../dhl" }
lightspeed = { path = "../lightspeed" }

clap = { workspace = true }
anyhow = "1.0.99"
thiserror = "2.0.12"
once_cell = "1.21.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "ansi"], default-features = false }
tracing-setup = { git = "https://github.com/brainhivenl/tracing-setup.git" }

chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4"] }
base64 = "0.22.1"

serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.1"
serde_json = "1.0.140"
toml = "0.8.22"

tokio = { version = "1.44.2", features = ["full"] }                                                                                   
futures = "0.3.31"
tower-http = { version = "0.6.6", features = ["trace"] }
reqwest = { version = "0.12.23", features = ["json"] }
axum = "0.8.3"                                                                                                                        
axum-macros = "0.5.0"
axum-prometheus = "0.9.0"
metrics = "0.24.2"

diesel = { version = "2.2.10", features = ["chrono", "uuid", "serde_json"]}
diesel-async = { version = "0.5.2", features = [
    "postgres",
    "bb8",
    "async-connection-wrapper",
] }


