[package]
name = "lightspeed"
version = "0.1.0"
edition = "2024"

[lib]
name = "lightspeed"
path = "lib.rs"

[[bin]]
name = "lightspeedctl"
path = "cli.rs"

[dependencies]
clap = { workspace = true } 
thiserror = "2.0.12"
once_cell = "1.21.3"
tracing = "0.1"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4"] }
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.1"
serde_json = "1.0.140"
toml = "0.8.22"
tokio = { version = "1.44.2", features = ["full"] }                                                                                   
futures = "0.3.31"
tower-http = { version = "0.6.6", features = ["trace"] }
reqwest = { version = "0.12.23", features = ["json"] }
